--- a/Penguinicebreaker/app/src/main/res/layout/activity_main.xml
+++ b/Penguinicebreaker/app/src/main/res/layout/activity_main.xml
@@ -52,4 +52,21 @@
         app:layout_constraintTop_toBottomOf="@+id/login_button"
         tools:ignore="MissingConstraints" />
 
+    <TextView
+        android:id="@+id/textV"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="TextView"
+        app:layout_constraintBottom_toBottomOf="@+id/nameUser"
+        tools:layout_editor_absoluteX="163dp" />
+
+    <ImageView
+        android:id="@+id/imageFacebook"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/com_facebook_profile_picture_blank_square"
+        tools:layout_editor_absoluteX="81dp"
+        tools:layout_editor_absoluteY="295dp" />
+
 </android.support.constraint.ConstraintLayout>
