--- a/Penguinicebreaker/app/src/main/res/layout/activity_main.xml
+++ b/Penguinicebreaker/app/src/main/res/layout/activity_main.xml
@@ -215,9 +215,9 @@
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="@+id/newGame"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.881"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/newGame" />
+        app:layout_constraintStart_toEndOf="@+id/newGame"
+        app:layout_constraintTop_toTopOf="@+id/newGame"
+        app:layout_constraintVertical_bias="0.153" />
 
     <Button
         android:id="@+id/share"
